@@ -9,7 +9,9 @@ Version 1.0 BETA
     - "watched" variables in LCD service menu
     - default setting restore
     - improve doxygen comments
-    - user documentation generated by doxygen 
+    - user documentation generated by doxygen
+    - improve power management (switch off unused parts)
+    - improve motor control (based on speed) 
     
 Version 2.0
     - wireles communication
